--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,13 +18,12 @@ jobs:
       if: github.event.action == 'opened'
       with:
         project: 'https://github.com/orgs/near/projects/9'
-        column_name: 'Proposals'
 
-    - name: Assign issues and pull requests with `proposals` label to project 9
-      uses: srggrs/assign-one-project-github-action@1.2.1
-      if: |
-        contains(github.event.issue.labels.*.name, 'proposals') ||
-        contains(github.event.pull_request.labels.*.name, 'proposals')
-      with:
-        project: 'https://github.com/orgs/near/projects/9'
-        column_name: 'Proposals'
+#     - name: Assign issues and pull requests with `proposals` label to project 9
+#       uses: srggrs/assign-one-project-github-action@1.2.1
+#       if: |
+#         contains(github.event.issue.labels.*.name, 'proposals') ||
+#         contains(github.event.pull_request.labels.*.name, 'proposals')
+#       with:
+#         project: 'https://github.com/orgs/near/projects/9'
+#         column_name: 'Proposals'
