--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
     types: [opened, labeled]
 env:
-  GITHUB_TOKEN: ${{ github.PROJECT_MANAGER_KEY }}
+  GITHUB_TOKEN: ${{ github.MY_GITHUB_TOKEN }}
 
 jobs:
   assign_one_project:
